Aggiunte pagine di registrazione ed autenticazione personalizzate; rinominazioni

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 	<div>
 		<h4>Operazioni</h4>
 		<div>
-			<a th:href="@{/create-team}">Crea team</a>
+			<a th:href="@{/teams/new}">Crea un team</a>
 		</div>
 	</div>
 </body>
