--- a/src/main/resources/templates/create-team-form.html
+++ b/src/main/resources/templates/create-team-form.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<form th:action="@{/create-team}" method="POST" th:object="${team}">
+	<form th:action="@{/teams}" method="POST" th:object="${team}">
 		<div th:if="${#fields.hasGlobalErrors()}">
 			<p th:each="err : ${#fields.globalErrors()}" th:text="${err}">Errore globale</p>
 		</div>
