--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,33 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Sign up</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous">
+	<title>Sign up</title>
 </head>
 
 <body>
-    <div class="container">
-        <form th:action="@{/register}" class="form-signin" method="post" th:object="${credentials}">
-            <h2 class="form-signin-heading">Sign up</h2>
-            <p>
-                <label for="username" class="sr-only">Username</label>
-                <input type="text" id="username" name="username" th:field="*{username}" class="form-control" placeholder="Username" required=""
-                    autofocus="">
-            </p>
-            <p>
-                <label for="password" class="sr-only">Password</label>
-                <input type="password" id="password" name="password" th:field="*{password}" class="form-control" placeholder="Password"
-                    required="">
-            </p>
-            <input name="_csrf" type="hidden" value="3a64274b-bf5f-43d3-97a0-6a514a9c3776">
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
-        </form>
-    </div>
+	<h1>Sign up</h1>
+	<div th:if="${param.error}">
+		Invalid username and password.</div>
+	<div th:if="${param.logout}">
+		You have been logged out.</div>
+	<form th:action="@{/register}" method="post">
+		<div>
+			<input type="text" name="username" placeholder="Username" />
+		</div>
+		<div>
+			<input type="password" name="password" placeholder="Password" />
+		</div>
+		<input type="submit" value="Sign up" />
+	</form>
 </body>
 
 </html>
