Implementato il sistema di inviti; refactoring generale

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,27 @@
 
 <body>
 	<div>
-		<h4>Operazioni</h4>
+		<div>
+			<h4>Generalità utente</h4>
+		</div>
+		<div>
+			<h4>Inviti in sospeso</h4>
+			<ul>
+				<li th:each="invite : ${invites}">
+					<span th:text="${'From ' + invite.sender.name + ' (' + invite.dateTime + ')'}"></span>
+					<a th:href="@{'/invite/' + ${invite.id} + '/accept'}">Accetta</a>
+					<a th:href="@{'/invite/' + ${invite.id} + '/decline'}">Rifiuta</a>
+				</li>
+			</ul>
+		</div>
+		<div>
+			<h4>Le mie squadre</h4>
+			<ul>
+				<li th:each="membership : ${memberships}">
+					<a th:href="@{'/teams/' + ${membership.team.id}}" th:text="${membership.team.name}"></a>
+				</li>
+			</ul>
+		</div>
 		<div>
 			<a th:href="@{/teams/new}">Crea un team</a>
 		</div>
