--- a/src/main/resources/templates/create-event.html
+++ b/src/main/resources/templates/create-event.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<form th:action="@{'/team/' + ${planner.id} + '/event'}" method="POST" th:object="${event}">
+	<form th:action="@{/admin/event}" method="POST" th:object="${event}">
 		<div>
 			Nome dell'evento: <input type="text" th:field="*{name}">
 		</div>
