--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 
 <head>
 	<title>Registrati</title>
@@ -13,6 +12,12 @@
 		</div>
 		<div>
 			<input type="password" name="password" placeholder="Password" />
+		</div>
+		<div>
+			<input type="text" name="name" placeholder="Nome" />
+		</div>
+		<div>
+			<input type="text" name="surname" placeholder="Cognome" />
 		</div>
 		<input type="submit" value="Registrati" />
 	</form>
