--- a/src/main/resources/templates/event.html
+++ b/src/main/resources/templates/event.html
@@ -3,28 +3,21 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<title>Event</title>
+	<title>Evento</title>
 </head>
 
 <body>
-	<div>
-		<div>
-			<h4>Generalità evento</h4>
-			<span th:text="${event.name}">Nome evento</span>
-		</div>
-		<div>
+	<main>
+		<h1 th:text="${event.name}"></h1>
+		<section>
 			<h4>Partecipanti</h4>
 			<ul>
 				<li th:each="participant : ${participants}">
-					<span th:text="${participant.alias}"></span>
+					<span th:text="${participant.surname + ', ' + participant.name}"></span>
 				</li>
 			</ul>
-		</div>
-		<a th:href="@{'/team/' + ${team.id} + '/event/' + ${event.id} + '/cancel'}">
-			Annulla evento
-		</a>
-	</div>
-	<footer><a href="/">Home</a></footer>
+		</section>
+	</main>
 </body>
 
 </html>
