--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,8 +13,17 @@
 			<h2>Eventi</h2>
 			<ul>
 				<li th:each="event : ${events}">
-					<a th:href="@{'/event/' + ${event.id}}" th:text="${event.name}"></a>
-					<a th:href="@{'/event/' + ${event.id} + '/participate'}">Partecipa</a>
+					<a th:href="@{'/event/' + ${event.id}}"
+					th:text="${event.name}">
+					</a>
+					<a th:if="${!#lists.contains(event.participants, currentUser)}"
+					th:href="@{'/event/' + ${event.id} + '/participate'}">
+						Partecipa
+					</a>
+					<a th:if="${#lists.contains(event.participants, currentUser)}"
+					th:href="@{'/event/' + ${event.id} + '/cancel-participation'}">
+						Annulla partecipazione
+					</a>
 				</li>
 			</ul>
 		</section>
