Implementato creazione, modifica e cancellazione di competizioni

--- a/src/main/resources/templates/admin-home.html
+++ b/src/main/resources/templates/admin-home.html
@@ -39,6 +39,17 @@
 				</li>
 			</ul>
 		</section>
+		<section>
+			<h2>Competizioni</h2>
+			<a th:href="@{/admin/create-competition}">Crea competizione</a>
+			<ul>
+				<li th:each="competition : ${competitions}">
+					<span th:text="${competition.name}"></span>
+					<a th:href="@{'/admin/competition/' + ${competition.id} + '/update'}">Modifica</a>
+					<a th:href="@{'/admin/competition/' + ${competition.id} + '/delete'}">Cancella</a>
+				</li>
+			</ul>
+		</section>
 	</main>
 </body>
 
