Aggiunto tasti di navigazione

--- a/src/main/resources/templates/admin-competition.html
+++ b/src/main/resources/templates/admin-competition.html
@@ -23,6 +23,10 @@
 			</ul>
 		</section>
 	</main>
+		<h3>
+			Ritorna alla 
+			<a th:href="@{/admin}">admin home</a>
+		</h3>
 </body>
 
 </html>
