--- a/src/main/resources/templates/admin-home.html
+++ b/src/main/resources/templates/admin-home.html
@@ -51,6 +51,11 @@
 				</li>
 			</ul>
 		</section>
+		<div>
+			<h3>
+				Effettua il 
+				<a th:href="@{/logout}">logout</a>
+			</h3>
 	</main>
 </body>
 
