--- a/src/main/resources/templates/create-competition.html
+++ b/src/main/resources/templates/create-competition.html
@@ -21,6 +21,9 @@
 			<button type="submit">Crea</button>
 		</div>
 	</form>
+		<h3>
+			<a th:href="@{/admin}">Annulla</a>
+		</h3>
 </body>
 
 </html>
