--- a/src/main/resources/templates/create-match.html
+++ b/src/main/resources/templates/create-match.html
@@ -32,6 +32,9 @@
 		<div>
 			<button type="submit">Crea</button>
 		</div>
+		<h3>
+			<a th:href="@{/admin}">Annulla</a>
+		</h3>
 	</form>
 </body>
 
