--- a/src/main/resources/templates/update-competition.html
+++ b/src/main/resources/templates/update-competition.html
@@ -23,6 +23,9 @@
 			<button type="submit">Salva modifiche</button>
 		</div>
 	</form>
+	<h3>
+		<a th:href="@{/admin}">Annulla</a>
+	</h3>
 </body>
 
 </html>
