--- a/src/main/resources/templates/create-competition.html
+++ b/src/main/resources/templates/create-competition.html
@@ -11,12 +11,18 @@
 		<div>
 			Nome della competizione: <input type="text" th:field="*{name}">
 		</div>
+		<span th:if="${#fields.hasErrors('name')}" 
+			  th:errors="*{name}"></span>
 		<div>
 			Data ed ora di inizio della competizione: <input type="datetime-local" th:field="*{startDateTime}">
 		</div>
+		<span th:if="${#fields.hasErrors('startDateTime')}" 
+			  th:errors="*{startDateTime}"></span>
 		<div>
 			Data ed ora di fine della competizione: <input type="datetime-local" th:field="*{endDateTime}">
 		</div>
+		<span th:if="${#fields.hasErrors('endDateTime')}" 
+			  th:errors="*{endDateTime}"></span>
 		<div>
 			<button type="submit">Crea</button>
 		</div>
