--- a/src/main/resources/templates/create-event.html
+++ b/src/main/resources/templates/create-event.html
@@ -11,9 +11,13 @@
 		<div>
 			Nome dell'evento: <input type="text" th:field="*{name}">
 		</div>
+		<span th:if="${#fields.hasErrors('name')}" 
+			  th:errors="*{name}"></span>
 		<div>
 			Data ed ora dell'evento: <input type="datetime-local" th:field="*{dateTime}">
 		</div>
+		<span th:if="${#fields.hasErrors('dateTime')}" 
+			  th:errors="*{dateTime}"></span>
 		<div>
 			<button type="submit">Crea</button>
 		</div>
