--- a/src/main/resources/templates/create-match.html
+++ b/src/main/resources/templates/create-match.html
@@ -11,9 +11,13 @@
 		<div>
 			Data ed ora di inizio del match: <input type="datetime-local" th:field="*{dateTime}">
 		</div>
+		<span th:if="${#fields.hasErrors('dateTime')}" 
+			  th:errors="*{dateTime}"></span>
 		<div>
 			Avversario: <input type="text" th:field="*{opponent}">
 		</div>
+		<span th:if="${#fields.hasErrors('opponent')}" 
+			  th:errors="*{opponent}"></span>
 		<div>
 			Risultato:
 			<div th:each="result : ${T(it.mantik.esquid.model.MatchResult).values()}">
@@ -29,6 +33,8 @@
 				</label>
 			</div>
 		</div>
+		<span th:if="${#fields.hasErrors('result')}" 
+			  th:errors="*{result}"></span>
 		<div>
 			<button type="submit">Crea</button>
 		</div>
