--- a/src/main/resources/templates/update-event.html
+++ b/src/main/resources/templates/update-event.html
@@ -11,9 +11,13 @@
 		<div>
 			Nome dell'evento: <input type="text" th:field="*{name}">
 		</div>
+		<span th:if="${#fields.hasErrors('name')}"
+			  th:errors="*{name}"></span>
 		<div>
 			Data ed ora dell'evento: <input type="datetime-local" th:field="*{dateTime}">
 		</div>
+		<span th:if="${#fields.hasErrors('dateTime')}"
+			  th:errors="*{dateTime}"></span>
 		<input type="hidden" th:field="*{id}" />
 		<input type="hidden" th:field="*{participants}" />
 		<div>
